<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/points"
            android:icon="@mipmap/ic_points"
            android:title="@string/points_accumulated" />
        <item
            android:id="@+id/workout"
            android:icon="@mipmap/ic_workout_summary"
            android:title="@string/workout" />
        <item
            android:id="@+id/doctor"
            android:icon="@mipmap/ic_doctor"
            android:title="@string/doctor_notes" />
        <item
            android:id="@+id/eating_habit"
            android:icon="@mipmap/ic_eating_habit"
            android:title="@string/track_eating" />
    </group>

    <item android:title="@string/toDoList">
        <menu>
            <item
                android:id="@+id/sample"
                android:icon="@mipmap/ic_todo"
                android:title="@string/sample_monday" />
            <item
                android:id="@+id/addToDo"
                android:icon="@mipmap/ic_todo"
                android:title="@string/addToDoList" />
        </menu>
    </item>

</menu>
