<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/congrats_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/congrats_message"
            android:ems="10"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/appName"/>

        <TextView
            android:id="@+id/points_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points_message"
            android:ems="10"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/congrats_message"/>

        <TextView
            android:id="@+id/points_counter"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_below="@id/points_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/points_background"
            android:ems="10"
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="30dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="30dp"
            android:text="@string/sample_points"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/points_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points_summary"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_marginTop="90dp"
            android:layout_below="@id/points_counter"
            android:layout_centerHorizontal="true"
            android:clickable="true"/>

        <TextView
            android:id="@+id/earn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earn_points"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_marginTop="27dp"
            android:layout_below="@id/points_summary"
            android:layout_centerHorizontal="true"
            android:clickable="true"/>


    </android.widget.RelativeLayout>
</ScrollView>
