<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login">

        <ImageView
            android:id="@+id/appName"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@mipmap/ic_app"
            android:layout_marginTop="32dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/textbox_background"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/appName"/>

        <AutoCompleteTextView
            android:id="@+id/password"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/textbox_background"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginTop="54dp"
            android:onClick="login"
            android:text="@string/action_sign_in_short"
            android:background="@drawable/button_background"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"/>
    </android.widget.RelativeLayout>
</ScrollView>
